--- a/app/scss/_globals.scss
+++ b/app/scss/_globals.scss
@@ -8,6 +8,11 @@ html {
     box-sizing: inherit;
 }
 
+body {
+    font-family: 'Bebas', sans-serif;
+    font-weight: 400;
+}
+
 .container {
     max-width: 960px;
     background-color: #fefefe;
