--- a/app/scss/_globals.scss
+++ b/app/scss/_globals.scss
@@ -15,7 +15,7 @@ body {
 
 .container {
     max-width: 960px;
-    background-color: #fefefe;
+    background-color: #fff;
     padding: 0 10px;
     margin: 0 auto;
 }
