--- a/app/scss/_globals.scss
+++ b/app/scss/_globals.scss
@@ -11,11 +11,12 @@ html {
 body {
     font-family: 'Bebas', sans-serif;
     font-weight: 400;
+    background-color: #fff;
 }
 
 .container {
     max-width: 960px;
-    background-color: #fff;
+    background-image: url(../images/white.jpg);
     padding: 0 10px;
     margin: 0 auto;
 }
