--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -26,6 +26,15 @@
                 color: #e8663c;
             }
         }
+        &-btn {
+            display: none;
+            &--line {
+                height: 3px;
+                width: 30px;
+                background-color: #000;
+                margin-bottom: 3px;
+            }
+        }
     }
 }
 
@@ -38,14 +47,36 @@
 }
 
 .sliders {
-    background-color: rgba(232, 96, 60, 0.502);
-    height: 62px;
-    width: 100%;
-    margin-bottom: 520px;
+    position: relative;
+    margin-bottom: 20px;
+    &::before {
+        content: "";
+        position: absolute;
+        background-color: rgba(232, 96, 60, 0.502);
+        height: 62px;
+        width: 100%;
+    }
 }
 
 .slider {
     margin-bottom: 20px;
+    &::before {
+        content: "";
+        position: absolute;
+        background-color: #fff;
+        height: 62px;
+        width: 10px;
+        left: -10px;
+    }
+    &::after {
+        content: "";
+        position: absolute;
+        background-color: #fff;
+        height: 62px;
+        width: 10px;
+        right: -10px;
+        top: 0;
+    }
     &__item {
         min-height: 400px;
         background-size: cover;
@@ -57,7 +88,6 @@
         background-color: rgb(232, 102, 60);
         opacity: 0.8;
         width: 413px;
-        height: 124px;
         margin-top: 245px;
         margin-left: 28px;
         padding: 19px 22px;
@@ -73,7 +103,6 @@
 
 .thumbs .slick-track {
     transform: translate3d(0px, 0px, 0px) !important;
-    width: 940px !important;
 }
 
 .thumbs .slick-slide {
@@ -151,7 +180,7 @@
 
 .work::before {
     background-image: url(../images/icons/item-2.svg);
-    width: 50px;
+    width: 48px;
     height: 40px;
 }
 
@@ -166,17 +195,19 @@
     color: #e8663c;
     font-weight: 700;
     margin-bottom: 50px;
-    &__title {
+    &__line {
+        background-image: url(../images/recent_work/line.png);
+        background-size: cover;
+        background-position: center;
+        background-repeat: no-repeat;
+        width: 100%;
+        height: 18px;
         margin-bottom: 26px;
+    }
+    &__title {
         position: relative;
-        &::after {
-            content: "";
-            position: absolute;
-            margin-left: 20px;
-            background-image: url(../images/recent_work/line.png);
-            width: 84%;
-            height: 19px;
-        }
+        background-color: #fff;
+        width: 135px;
     }
     &__inner {
         display: flex;
@@ -212,10 +243,29 @@
     background-color: #f2b19c;
     &__inner {
         background-color: #e8663c;
+        position: relative;
         color: #fff;
         display: flex;
         justify-content: space-between;
         padding: 43px 35px 30px;
+        &::before {
+            content: "";
+            position: absolute;
+            background-color: #fff;
+            height: 100%;
+            width: 10px;
+            left: -10px;
+            top: 0;
+        }
+        &::after {
+            content: "";
+            position: absolute;
+            background-color: #fff;
+            height: 100%;
+            width: 10px;
+            right: -10px;
+            top: 0;
+        }
     }
     & a {
         color: #f3b29d;
@@ -262,3 +312,5 @@
         color: #fff;
     }
 }
+
+@import 'media';
