--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -21,6 +21,7 @@
         }
         & a {
             text-decoration: none;
+			text-transform: uppercase;
             color: #b9b9b9;
             &:hover {
                 color: #e8663c;
